create proper title page for summary

--- a/Documentation/summary.tex
+++ b/Documentation/summary.tex
@@ -3,19 +3,36 @@
 \usepackage{multicol}
 \usepackage{hyperref}
 \usepackage{geometry}
+
 \geometry{margin=3cm}
 \title{	
 
-Genome Wide Association Study using Espresso Methods
+\Huge Genome Wide Association Study \\
+\Huge using Espresso Methods
+\\ \quad \\ \quad \\
+\Large Summer Internship 2025\\
+\quad\\
 }
 
-\author{ Janis Waser}
+\author{ \Large Janis Waser\\
+\\ \\ \\
+\Large Supervised by \\
+\Large Francesco Costa and Professoressa Laura Pozzi\\
+\\ \\ \\
+\Large Università della Svizzera italiana (USI)\\
+\\ \\ 
+\includegraphics[width=0.3\textwidth]{usi}\\
+\\ \\ 
+\Large Facoltà di scienze informatiche\\
+\\ \\
+\Large Istituto di sistemi informatici (SYS)\\
+\\ \\
+}
+\date{July-August 2025}
 \begin{document}
 \maketitle
-
-
-
-
+\thispagestyle{empty}
+\newpage
 \section{Goal}
 \label{sec:goal}
 Genome wide association studies  (GWAS) are increasingly reliable and thus able to explain biological phenomena. A polygenic risk score is easily computable, but only gives limited insight to the inner mechanisms which are involved. Analyzing all possible combinations by brute-force for large data sets is not feasible and we must find methods which circumvent this complexity and still produce reliable results.
