add explaination for leftover blocking of SNPs in pyramid and group scheme

--- a/Documentation/summary.tex
+++ b/Documentation/summary.tex
@@ -193,7 +193,9 @@ The time required to go through the entire dataset is immense, we are not able t
 \subsection{Pyramid scheme}
 In the pyramid scheme, the algorithm runs sequentially through the entire dataset by separating all SNPs into groups of size $k$, finding a minimal cover for every group. All the SNPs making part of a found minimal cover are then subsequently taken to the next level. This is repeated until in one level  all the identified SNPs from the previous level are less than k SNPs, from where a minimal cover for the entire universe of less than k SNPs can be found. \\
 
-The selection of the group can be done in many ways, we decided to analyze the random selection approach as well as sequential, which should correspond to the sequences in the DNA as already explained in Chapter \ref{sec:omit}. We found random selection to be clearly preferable as we can see in Figure \ref{fig:randseq} and also because of the missingness problem with sequential selection.\\
+The selection of the group can be done in many ways, we decided to analyze the random selection approach as well as sequential, which should correspond to the sequences in the DNA as already explained in Chapter \ref{sec:omit}. We found random selection to be clearly preferable as we can see in Figure \ref{fig:randseq} and also because of the missingness problem with sequential selection.
+We can either reshuffle the found SNPs or respect the order to preserve the relations from the previous level. We found that in-level shuffling yields slightly better results compared to preserving the relations. With this method, there is a higher probability for any two SNP to be in the same group which is not in the last level, but it also means that potential relations on a previous level are disregarded. 
+The group size is fixed, but to prevent a small leftover, the leftover SNPs are added to the last full group, which means the max size of this group is at most doubles minus 1. If the groups from the previous level are respected, every group was filled with SNPs block-wise from the previous levels, meaning that all groups have at least group size k but most have slightly more SNPs and the last group might have 2k plus the size of the last minimal cover of the previous level minus one. \\
 
 The selection of our SNPs compared to a random selection is indicating that they do not belong to the same distribution. For example, 9 SNPs together gave 2.03 as PRS value, while for a random selection distribution we have normal distribution with $\mu =0, \sigma=0.23$ giving p=0.000024, a random positive selection has distribution of $\mu =1.1, \sigma=0.096$, therefore giving p=0.0033, see Figure \ref{fig:boxplot}.
 
@@ -206,9 +208,9 @@ The selection of our SNPs compared to a random selection is indicating that they
 The grouping scheme method divides the individuals into different equal-sized groups. For each level one group is chosen and the dataset of only those individuals is considered, the rest is performed similar to the Pyramid scheme. 
 
 On each level, only a part of the individuals is considered, this means, that the minimal cover is optimized only for those people. On the next level, different individuals get selected, we can assume their phenotype is determined by the same underlying structure, therefore the previous minimal covers should suffice to find a minimal cover. If this is not the case, we have an over-specified truth table, this might be due to there not being an underlying structure or the missing detection of it or due to errors in genotyping. 
-We tested two methods for passing SNPs down a level: shuffling in every level and preserving original state. Preserving states did generally perform worse in terms of products and literals but also for the out-of-sample accuracy. On the other hand, it might occur that good combinations from the previous level are split when shuffling in every level.
+As for the pyramid scheme, we tested two methods for passing SNPs down a level and found the same preference for random shuffling in every level.  We use the same ruleset for overflow or leftover SNPs. \\
 
-We found group sizes of 25\% of the in-sample data to be fitting for the approach with our initial dataset. With alternating groups, such as when splitting the individuals into two groups (group sizes of 50\%), the method yields lower prediction accuracies than the Pyramid scheme or 25\% group sizes. We suspect it  was optimizing for the in-sample data. Additionally, alternating often fails due to over-specification especially if the order from the previous level is not respected (shuffle SNPs after each level).
+We found group sizes of 25\% of the in-sample data to be fitting for the approach with our initial dataset. With alternating groups, such as when splitting the individuals into two groups (group sizes of 50\%), the method yields lower prediction accuracies than the Pyramid scheme or 25\% group sizes. We suspect it  was optimizing for the in-sample data. Additionally, alternating often fails due to over-specification especially if the order from the previous level is not respected (shuffle SNPs after each level).\\
 
 Later the code was changed to refer to the previous level's selection of individuals if the final analysis is over-specified. This should resolve most cases where over-specification was still posing a problem. We maintain the stance the randomization between the levels is preferable as this allows for more diverse range of combinations.
 
@@ -255,7 +257,7 @@ The histogram seems less crowded than the Manhattan plot of the PRS of Figure \r
 Another question is whether the global optima or any found cover for this purposes actually has biological credibility in explaining the surveyed phenotype. \\
 
 The final method, we claim works the best using Espresso for our test-data has following properties: QC completed, binary translation adjusted with $2_{10}=11_2$, randomization for the selection of 200 SNPs for the start as well as between the levels, using the grouping scheme with 25\% of the total population per group, allow at most 30 unknowns before cutting individuals, which in fact does not happen, not checking for over-specification as it does not happen either. 
-\section{Future potential}%Conclusion??
+\section{Future potential}%Conclusion
 This research is severely limited by the availability of data and the capabilities of Espresso. Encoding the problem with an SMT solver allows for ternary encoding, additionally we could increase the confidence for combinations including ors. If this is feasible, we would be able to identify more responsible SNP in more complex circumstance, as long as they solely and entirely determine the phenotype. Analysis of the products could detect different undetected subtypes of a disease and allow for separation of those types.  \\
 
 
