rename documentation and add hint about ternary

--- a/Documentation/GWAS_Internship25_Janis_Waser.tex
+++ b/Documentation/GWAS_Internship25_Janis_Waser.tex
@@ -260,10 +260,10 @@ Another question is whether the global optima or any found cover for this purpos
 
 The final method, we claim works the best using Espresso for our test-data has following properties: QC completed, binary translation adjusted with $2_{10}=11_2$, randomization for the selection of 200 SNPs for the start as well as between the levels, using the grouping scheme with 25\% of the total population per group, allow at most 30 unknowns before cutting individuals, which in fact does not happen, not checking for over-specification as it does not happen either. 
 \section{Future potential}%Conclusion
-This research is severely limited by the availability of data and the capabilities of Espresso. Encoding the problem with an SMT solver allows for ternary encoding, additionally we could increase the confidence for combinations including ors. If this is feasible, we would be able to identify more responsible SNP in more complex circumstance, as long as they solely and entirely determine the phenotype. Analysis of the products could detect different undetected subtypes of a disease and allow for separation of those types.  \\
+This research is severely limited by the availability of data and the capabilities of Espresso. Encoding the problem with ternary encoding might improve accuracy. Although, we did not achieve to find a way in which this can be, we believe there exists some structures to support  multivalued inputs with Espresso. Additionally, we could increase the confidence for combinations including ors by using SMT solver instead of heuristic Espresso. If this is feasible, we would be able to identify more responsible SNP in more complex circumstance, as long as they solely and entirely determine the phenotype. Analysis of the products could detect different undetected subtypes of a disease and allow for separation of those types.  \\
 
 
-The method succeeds at finding risk loci, but as of now, it fails in correctly predicting the phenotype. Better datasets and tools might increase the reliability but PRS remains strong in predicting on an individual level. Our approach would be more fit for identifying the cause of disease and therefore for use in research. 
+The method succeeds at finding risk loci, but as of now, it fails in correctly predicting the phenotype. Better datasets and tools might increase the reliability but PRS remains strong in predicting on an individual level. Our approach would be more fit for identifying the cause of disease and therefore be a tool for use in research. 
 
 If the method is not able to find minimum covers, this might be due to a violation of the initial assumptions or in particular because the phenotype cannot be fully explained through genetics. We do not see this as a bug but rather a feature.\\
 
